# PERM

./: .gitignore  LICENSE  MANIFEST.in  README.md  RECIPE.md  pyproject.toml
coldpress/: __init__.py  cli.py  config.py  distill.py  ef.py  gates.py  ggufio.py  hessians.py  kquant.py  llamacpp.py  parse_ppl.py  scale_tune.py  teacher.py
coldpress/data/: fineweb-calib.txt  fineweb-heldout.txt
coldpress/perm/: __init__.py  imatrix.py  objective.py  optimize.py  registry.py
coldpress/perm/spacemaps/: __init__.py  gemma4.py  qwen3.py  qwen35.py
docs/: kaggle.md  spacemaps.md
paper/: METHOD.md  coldpress.tex
tests/: conftest.py  test_bf16_distill.py  test_cli_flags.py  test_config.py  test_decoders.py  test_distill_bf16_integration.py  test_ef_cholesky_robust.py  test_ef_synthetic.py  test_encode_integration.py  test_encoder_faithfulness.py  test_ggufio.py  test_hessian_fp16.py  test_hessians.py  test_perm_optimize.py  test_scale_tune.py  test_spacemap.py  test_spacemap_qwen35_gemma4.py  test_strip_vision.py
